--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -32,7 +32,14 @@
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <div class="main-card mb-3 card">
                     <div class="card-body">
-                        <h5 style="font-size: large;" class="card-title">Terms and conditions for accessing or otherwise using Algotrader service </h5>
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h5 style="font-size: large;" class="card-title">Terms and conditions for accessing or otherwise using Algotrader service </h5>
+                            </div>
+                            <div>
+                                <a href="/station/download_contract" download><i class="nav-link-icon fa fa-download"> </i>Download contract</a><br>
+                            </div>
+                        </div>
                         <div class="form-row">
                             <div class="col-md-12">
                                 <div class="position-relative form-group">
