--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -260,29 +260,31 @@
                                            class="form-control strategy-change"></div>
                             </div>
                         </div>
-                        <div class="form-row">
+<!--                        <div class="form-row">-->
+<!--                            <div class="col-md-1">-->
+<!--                                <div class="position-relative form-check">-->
+<!--                                    <input title="Apply minimal Stock Invest Rank"-->
+<!--                                           {%if user_settings.algo_apply_min_stock_invest_rank%}-->
+<!--                                           checked-->
+<!--                                           {% endif %}-->
+<!--                                           name="algo_apply_min_stock_invest_rank" id="algo_apply_min_stock_invest_rank"-->
+<!--                                           type="checkbox"-->
+<!--                                           class="form-check-input strategy-change">-->
+<!--                                    <label for="algo_apply_min_stock_invest_rank" class="form-check-label">Apply</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="col-md-4">-->
+<!--                                <div class="position-relative form-group">-->
+<!--                                    <label for="algo_min_stock_invest_rank" class="">Minimal Stock Invest rank</label>-->
+<!--                                    <input title="Minimal accepted rating"-->
+<!--                                           value="{{user_settings.algo_min_stock_invest_rank}}"-->
+<!--                                           name="algo_min_stock_invest_rank" id="algo_min_stock_invest_rank" type="text"-->
+<!--                                           class="form-control strategy-change"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+                        <input type="hidden" name="algo_apply_min_stock_invest_rank" id="algo_apply_min_stock_invest_rank" value="{{user_settings.algo_apply_min_stock_invest_rank}}">
+                        <input type="hidden" name="algo_min_stock_invest_rank" id="algo_min_stock_invest_rank" value="{{user_settings.algo_min_stock_invest_rank}}">
 
-                            <div class="col-md-1">
-                                <div class="position-relative form-check">
-                                    <input title="Apply minimal Stock Invest Rank"
-                                           {%if user_settings.algo_apply_min_stock_invest_rank%}
-                                           checked
-                                           {% endif %}
-                                           name="algo_apply_min_stock_invest_rank" id="algo_apply_min_stock_invest_rank"
-                                           type="checkbox"
-                                           class="form-check-input strategy-change">
-                                    <label for="algo_apply_min_stock_invest_rank" class="form-check-label">Apply</label>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="position-relative form-group">
-                                    <label for="algo_min_stock_invest_rank" class="">Minimal Stock Invest rank</label>
-                                    <input title="Minimal accepted rating"
-                                           value="{{user_settings.algo_min_stock_invest_rank}}"
-                                           name="algo_min_stock_invest_rank" id="algo_min_stock_invest_rank" type="text"
-                                           class="form-control strategy-change"></div>
-                            </div>
-                        </div>
                         <div class="form-row">
 
                             <div class="col-md-1">
