--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -263,7 +263,7 @@
         <div class="col-md-12">
             <div class="main-card mb-3 card">
                 <div class="card-header">Tracked Candidates {{ candidates_live|length }} Priority order : Tipranks >
-                    YahooRank >Stock Invest Rank> Underprice > Momentum
+                    YahooRank > Underprice > Momentum>Beta
                 </div>
 
                 <div class="table-responsive">
@@ -275,10 +275,9 @@
                             <th class="text-center">Open</th>
                             <th class="text-center">Ask Price</th>
                             <th class="text-center">Target Price</th>
-                            <th class="text-center">TipRank</th>
-                            <th class="text-center">Yahoo Rank</th>
-                            <th class="text-center">Stock Invest</th>
-                            <th class="text-center">FMP Rank</th>
+                            <th class="text-center">Analytics A</th>
+                            <th class="text-center">Analytics B</th>
+                            <th class="text-center">Analytics C</th>
                             <th class="text-center">Underprice(%)</th>
                             <th class="text-center">12M Momentum</th>
                             <th class="text-center">Beta</th>
@@ -304,12 +303,11 @@
                             <td class="text-center">{{value['target_price']|round(2)}}</td>
                             <td class="text-center">{{value['tipranksRank']}}</td>
                             <td class="text-center">{{value['yahoo_rank']}}</td>
-                            <td class="text-center">{{value['stock_invest_rank']}}</td>
                             <td class="text-center">{{value['fmp_rating']}}</td>
                             <td class="text-center">{{value['under_priced_pnt']}}</td>
-                            <td class="text-center">{{value['twelve_month_momentum']}}</td>
-                            <td class="text-center">{{value['beta']}}</td>
-                            <td class="text-center">{{value['max_intraday_drop_percent']}}</td>
+                            <td class="text-center">{{value['twelve_month_momentum']|round(1)}}</td>
+                            <td class="text-center">{{value['beta']|round(2)}}</td>
+                            <td class="text-center">{{value['max_intraday_drop_percent']|round(1)}}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
