modals - fix bug

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -7,8 +7,7 @@
             <div class="page-title-heading">
                 <div class="page-title-icon">
                     <button style="border: none;" onclick="fill_graph()" type="button"
-                            class="pe-7s-display1 icon-gradient bg-mean-fruit" data-toggle="modal"
-                            data-target="#sectors_modal">
+                            class="pe-7s-display1 icon-gradient bg-mean-fruit">
 
 
                     </button>
