--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='font-icons/css/pe-icon-7-stroke.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='font-icons/css/helper.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
+
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -267,6 +269,7 @@
 
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/jquery.min.js') }}"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script type="text/javascript">
             $.fn.bsModal = $.fn.modal.noConflict();
 </script>
