--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -33,10 +33,7 @@
                     <th>Ticker</th>
                     <th>Average drop %</th>
                     <th>Average spread %</th>
-                    <th>TipRank(Analytics A)</th>
-                    <th>Yahoo(Analytics B)</th>
-                    <th>FMP rating(Analytics C)</th>
-                    <th>FMP score(Analytics C)</th>
+                    <th>Algotrader Rank</th>
                     <th>Underpriced</th>
                     <th>12M Momentum</th>
                     <th>Target Mean price</th>
@@ -61,10 +58,7 @@
                     </td>
                     <td>{{ m.yahoo_avdropP|round(1, 'floor') }}</td>
                     <td>{{ m.yahoo_avspreadP|round(1, 'floor') }}</td>
-                    <td>{{ m.tipranks }}</td>
-                    <td>{{ m.yahoo_rank }}</td>
-                    <td>{{ m.fmp_rating }}</td>
-                    <td>{{ m.fmp_score }}</td>
+                    <td>{{ m.algotrader_rank }}</td>
                     <td>{{ m.under_priced_pnt }}</td>
                     <td>{{ m.twelve_month_momentum }}</td>
                     <td>{{ m.target_mean_price }}</td>
