--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -184,12 +184,21 @@
                 <div class="app-sidebar__inner">
                     <ul class="vertical-nav-menu">
                         <li class="app-sidebar__heading">Dashboards</li>
+                        {% if not current_user.is_admin()%}
                         <li>
                             <a href="/userview/traderstationstate">
                                 <i class="metismenu-icon pe-7s-display1"></i>
                                 Trader Station
                             </a>
                         </li>
+                        {%else%}
+                        <li>
+                            <a href="/admin/">
+                                <i class="metismenu-icon pe-7s-tools"></i>
+                                Administrator Dashboard
+                            </a>
+                        </li>
+                        {%endif%}
                         <li>
                             <a href="/candidates/usercandidates">
                                 <i class="metismenu-icon pe-7s-like"></i>
