priority label updated accordingly

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -261,8 +261,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="main-card mb-3 card">
-                <div class="card-header">Tracked Candidates {{ candidates_live|length }} Priority order : Tipranks >
-                    YahooRank > Underprice > Momentum>Beta
+                <div class="card-header">Tracked Candidates {{ candidates_live|length }} Priority order : Algotrader Rank> Underprice > Momentum>Beta
                 </div>
 
                 <div class="table-responsive">
