Black swan details

--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -7,6 +7,14 @@
     overflow-x: scroll;
 }
 
+.snp-modal{
+    overflow-y: scroll !important;
+}
+
+.link{
+    cursor: pointer;
+}
+
 .btn-off{
     background-color: #e0dede !important;
 }
