--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -152,7 +152,16 @@
                                                value="{{user_settings.algo_positions_for_swan}}"
                                                name="algo_positions_for_swan"
                                                id="algo_positions_for_swan" type="text"
-                                               class="form-control">
+                                               class="form-control blackswan-change">
+                                </div>
+                                <div>
+                                    <label class="pt-2 small filter-comment">
+                                        With
+                                        <span class="text-primary pr-2 pl-2 blackswan-min">{{user_settings.algo_positions_for_swan}}%</span>
+                                        selected there were :
+<!--                                        <a href="javascript:show_modal_snp" onclick="UpdateDefaultStrategy">test</a>-->
+                                        <span class="text-primary pr-1 pl-2 link" onclick="show_modal_snp()"><span class="blackswan-events pr-1"></span> events in last 5 Years</span>
+                                    </label>
                                 </div>
                             </div>
                             <div class="col-md-4 input-group d-block">
@@ -450,4 +459,42 @@
 {% endblock %}
 {% block scripting %}
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/settings.js') }}"></script>
+{% endblock %}
+
+{% block modal %}
+<div class="modal snp-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">S&P in last 5 years</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <table class="ui searchable sortable unstackable selectable celled table snp-tbl">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Open</th>
+                    <th>High</th>
+                    <th>Low</th>
+                    <th>Close</th>
+                    <th>Adj Close</th>
+                    <th>Volume</th>
+                    <th>Drop</th>
+                    <th>DropP</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
