--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -10,6 +10,11 @@
 .snp-modal{
     overflow-y: scroll !important;
 }
+.snp-tbl{
+    height: 500px;
+    overflow-y: scroll;
+    display: block;
+}
 
 .link{
     cursor: pointer;
